# --------------------------------------------------------------------
[package]
# --------------------------------------------------------------------
name = "iso639-1"
license = "MIT"
version = "0.3.0"
authors = ["Alban Minassian"]
description = "iso639-1 enum and utils"
homepage = "https://github.com/AlbanMinassian/iso639"
repository = "https://github.com/AlbanMinassian/iso639"
documentation = "https://docs.rs/iso639-1"
readme = "README.md"
workspace = ".."

# --------------------------------------------------------------------
[dependencies]
# --------------------------------------------------------------------
failure = "0.1.3"

serde = { version = "1", optional = true }

# --------------------------------------------------------------------
[dev-dependencies]
# --------------------------------------------------------------------
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[[test]]
name = "enum"
path = "tests/0001_enum.rs"

[[test]]
name = "to_enum"
path = "tests/0002_to_enum.rs"

[[test]]
name = "to_code"
path = "tests/0003_to_code.rs"

[[test]]
name = "serde"
path = "tests/0004_serde.rs"
required-features = ["serde"]
