# --------------------------------------------------------------------
[package]
# --------------------------------------------------------------------
name = "iso639-2"
license = "MIT"
version = "0.1.4"
authors = ["Alban Minassian"]
description = "iso639-2 enum"
homepage = "https://github.com/AlbanMinassian/iso639"
repository = "https://github.com/AlbanMinassian/iso639"
documentation = "https://docs.rs/iso639-2"
readme = "../README.md"
workspace = ".."
edition = "2018"

