# --------------------------------------------------------------------
[package]
# --------------------------------------------------------------------
name = "iso639_2"
license = "MIT"
version = "0.1.7"
authors = ["Alban Minassian"]
description = "iso639_2 enum"
homepage = "https://github.com/AlbanMinassian/iso639"
repository = "https://github.com/AlbanMinassian/iso639"
documentation = "https://docs.rs/iso639_2"
readme = "../README.md"
workspace = ".."
edition = "2018"

